2013-11-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Speedup by checking all devices.

2013-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (verify): Report drive error.

2013-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (verify): Report non-existant drive.

2013-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Allow multiple values for the one
	  property.

2013-11-18 Dan Locks <dwlocks@zmanda.com>
	* example/Makefile.am: update xml file names
	* example/amandaclient-tcp.xml.in: rename this
	* example/amandaclient.xml.in: to this
	* example/amandaserver-tcp.xml.in: rename this
	* example/amandaserver.xml.in: to this

2013-11-18 Dan Locks <dwlocks@zmanda.com>
	* example/Makefile.am: include new files in dist tarball
	* example/amandaclient-tcp.xml.in, example/amandaserver-tcp.xml.in:
	  smf manifests for solaris >= 10

2013-11-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/fileheader.c (parse_heredoc): print message to debug if
	  end of heredoc is not found.
	* server-src/amfetchdump.pl: Trap failure on XML::Simple::XMLin.

2013-11-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Fix pod.

2013-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c (delete_file): Fix typo.

2013-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c (delete_file): Check for no objects.
	* installcheck/Amanda_Device.pl: Use different bucket name for each
	  test.

2013-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm (USAGE BY TAPE): Add more space for the
	  Time.

2013-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Check for S3_ERROR_NoSuchBucket error.
	* device-src/s3.c: Do not free hdl->user_token twice.

2013-11-04  Jean-Louis Martineau <martineau@zmanda.com>