@@ -1,4 +1,7 @@
 2013-11-21  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Changer/robot.pm: s/look to be/looks to be/.
+
+2013-11-21  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Changer/robot.pm: Speedup by checking all devices.
 
 2013-11-20  Jean-Louis Martineau <martineau@zmanda.com>
